fixing small layout problems

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -312,6 +312,7 @@ ul {
 }
 
 .pictogram {
+	margin: 7px 0 0 0;
 	height: 1em;
 	vertical-align: text-top;
 }
